--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-token-tools-monorepo",
+  "name": "cobalt-monorepo",
   "private": true,
   "type": "module",
   "workspaces": [
@@ -7,9 +7,13 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "cd packages/design-token-tools && npm run build",
+    "build": "npm run build:core && npm run build:plugin-json && npm run build:plugin-sass && npm run build:plugin-ts",
+    "build:core": "cd packages/core && npm run build",
+    "build:plugin-json": "cd packages/plugin-json && npm run build",
+    "build:plugin-sass": "cd packages/plugin-sass && npm run build",
+    "build:plugin-ts": "cd packages/plugin-ts && npm run build",
     "lint": "eslint \"packages/**/*\"",
-    "dev": "cd packages/design-token-tools && npm run dev"
+    "dev": "cd packages/cobalt-ui && npm run dev"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
