--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,6 +6,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
+  "license": "BSD-3-Clause",
   "type": "module",
   "bin": {
     "cobalt": "./bin/cli.js"
