--- a/packages/plugin-json/package.json
+++ b/packages/plugin-json/package.json
@@ -6,6 +6,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
+  "license": "BSD-3-Clause",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
