--- a/examples/adobe/tokens.yaml
+++ b/examples/adobe/tokens.yaml
@@ -3,28 +3,182 @@ version: 0.1
 tokens:
   color:
     type: group
+    modes: ['lightest', 'light', 'dark', 'darkest']
     tokens:
-      blue:
-        value:
-          default: '#1473e6'
-      gray:
-        value:
-          default: '#4b4b4b'
-      green:
-        value:
-          default: '#268e6c'
-      red:
-        value:
-          default: '#d7373f'
-      orange:
-        value:
-          default: '#da7b11'
-  text:
+      # Semantic colors (primary colors with associated meanings)
+      blue_400:
+        value: ['#2680eb', '#378ef0', '#2680eb', '#2680eb', '#1473e6']
+      blue_500:
+        value: ['#1473e6', '#2680eb', '#1473e6', '#378ef0', '#2680eb']
+      blue_600:
+        value: ['#0d66d0', '#1473e6', '#0d66d0', '#4b9cf5', '#378ef0']
+      blue_700:
+        value: ['#095aba', '#0d66d0', '#095aba', '#5aa9fa', '#4b9cf5']
+      gray_50:
+        value: ['#ffffff', '#ffffff', '#ffffff', '#252525', '#080808']
+      gray_75:
+        value: ['#fafafa', '#ffffff', '#fafafa', '#2f2f2f', '#1a1a1a']
+      gray_100:
+        value: ['#f5f5f5', '#ffffff', '#f5f5f5', '#323232', '#1e1e1e']
+      gray_200:
+        value: ['#eaeaea', '#f4f4f4', '#eaeaea', '#3e3e3e', '#2c2c2c']
+      gray_300:
+        value: ['#e1e1e1', '#eaeaea', '#e1e1e1', '#4a4a4a', '#393939']
+      gray_400:
+        value: ['#cacaca', '#d3d3d3', '#cacaca', '#5a5a5a', '#494949']
+      gray_500:
+        value: ['#b3b3b3', '#bcbcbc', '#b3b3b3', '#6e6e6e', '#5c5c5c']
+      gray_600:
+        value: ['#8e8e8e', '#959595', '#8e8e8e', '#909090', '#7c7c7c']
+      gray_700:
+        value: ['#6e6e6e', '#747474', '#6e6e6e', '#b9b9b9', '#a2a2a2']
+      gray_800:
+        value: ['#4b4b4b', '#505050', '#4b4b4b', '#e3e3e3', '#c8c8c8']
+      gray_900:
+        value: ['#2c2c2c', '#323232', '#2c2c2c', '#ffffff', '#efefef']
+      green_400:
+        value: ['#2d9d78', '#33ab84', '#2d9d78', '#2d9d78', '#268e6c']
+      green_500:
+        value: ['#268e6c', '#2d9d78', '#268e6c', '#33ab84', '#2d9d78']
+      green_600:
+        value: ['#12805c', '#268e6c', '#12805c', '#39b990', '#33ab84']
+      green_700:
+        value: ['#107154', '#12805c', '#107154', '#3fc89c', '#39b990']
+      red_400:
+        value: ['#e34850', '#ec5b62', '#e34850', '#e34850', '#d7373f']
+      red_500:
+        value: ['#d7373f', '#e34850', '#d7373f', '#ec5b62', '#e34850']
+      red_600:
+        value: ['#c9252d', '#d7373f', '#c9252d', '#f76d74', '#ec5b62']
+      red_700:
+        value: ['#bb121a', '#c9252d', '#bb121a', '#ff7b82', '#f76d74']
+      orange_400:
+        value: ['#e68619', '#f29423', '#e68619', '#e68619', '#da7b11']
+      orange_500:
+        value: ['#da7b11', '#e68619', '#da7b11', '#f29423', '#e68619']
+      orange_600:
+        value: ['#cb6f10', '#da7b11', '#cb6f10', '#f9a43f', '#f29423']
+      orange_700:
+        value: ['#bd640d', '#cb6f10', '#bd640d', '#ffb55b', '#f9a43f']
+
+      # Label colors (secondary colors with no semantic meaning)
+      label:
+        type: group
+        tokens:
+          celery_400:
+            value: ['#44b556', '#4bc35f', '#44b556', '#44b556', '#3da74e']
+          celery_500:
+            value: ['#3da74e', '#44b556', '#3da74e', '#4bc35f', '#44b556']
+          celery_600:
+            value: ['#3da74e', '#3da74e', '#3da74e', '#51d267', '#4bc35f']
+          celery_700:
+            value: ['#3da74e', '#379947', '#3da74e', '#58e06f', '#51d267']
+          chartreuse_400:
+            value: ['#85d044', '#8ede49', '#85d044', '#85d044', '#7cc33f']
+          chartreuse_500:
+            value: ['#7cc33f', '#85d044', '#7cc33f', '#8ede49', '#85d044']
+          chartreuse_600:
+            value: ['#73b53a', '#7cc33f', '#73b53a', '#9bec54', '#8ede49']
+          chartreuse_700:
+            value: ['#6aa834', '#73b53a', '#6aa834', '#a3f858', '#9bec54']
+          fuchsia_400:
+            value: ['#c038cc', '#cf3edc', '#c038cc', '#c038cc', '#b130bd']
+          fuchsia_500:
+            value: ['#b130bd', '#c038cc', '#b130bd', '#cf3edc', '#c038cc']
+          fuchsia_600:
+            value: ['#a228ad', '#b130bd', '#a228ad', '#d951e5', '#cf3edc']
+          fuchsia_700:
+            value: ['#93219e', '#a228ad', '#93219e', '#e366ef', '#d951e5']
+          indigo_400:
+            value: ['#6767ec', '#7575f1', '#6767ec', '#6767ec', '#5c5ce0']
+          indigo_500:
+            value: ['#5c5ce0', '#6767ec', '#5c5ce0', '#7575f1', '#6767ec']
+          indigo_600:
+            value: ['#5151d3', '#5c5ce0', '#5151d3', '#8282f6', '#7575f1']
+          indigo_700:
+            value: ['#4646c6', '#5151d3', '#4646c6', '#9090fa', '#8282f6']
+          magenta_400:
+            value: ['#d83790', '#e2499d', '#d83790', '#d83790', '#ca2996']
+          magenta_500:
+            value: ['#ce2783', '#d83790', '#ce2783', '#e2499d', '#d83790']
+          magenta_600:
+            value: ['#bc1c74', '#ca2982', '#bc1c74', '#ec5aaa', '#e2499d']
+          magenta_700:
+            value: ['#ae0e66', '#bc1c74', '#ae0e66', '#f56bb7', '#ec5aaa']
+          purple_400:
+            value: ['#9256d9', '#9d64e1', '#9256d9', '#9256d9', '#864ccc']
+          purple_500:
+            value: ['#864ccc', '#9256d9', '#864ccc', '#9d64e1', '#9256d9']
+          purple_600:
+            value: ['#7a42bf', '#864ccc', '#7a42bf', '#a873e9', '#9d64e1']
+          purple_700:
+            value: ['#6f38b1', '#7a42bf', '#6f38b1', '#b483f0', '#a873df']
+          seafoam_400:
+            value: ['#1b959a', '#20a3a8', '#1b959a', '#1b959a', '#16878c']
+          seafoam_500:
+            value: ['#16878c', '#1b959a', '#16878c', '#20a3a8', '#1b959a']
+          seafoam_600:
+            value: ['#0f797d', '#16878c', '#0f797d', '#23b2b8', '#20a3a8']
+          seafoam_700:
+            value: ['#096c6f', '#0f797d', '#096c6f', '#26c0c7', '#23b2b8']
+          yellow_400:
+            value: ['#dfbf00', '#edcc00', '#dfbf00', '#dfbf00', '#d2b200']
+          yellow_500:
+            value: ['#d2b200', '#dfbf00', '#d2b200', '#edcc00', '#dfbf00']
+          yellow_600:
+            value: ['#c4a600', '#d2b200', '#c4a600', '#fad900', '#edcc00']
+          yellow_700:
+            value: ['#b79900', '#c4a600', '#b79900', '#ffe22e', '#fad900']
+  type:
+    name: Typography
     type: group
-    modes: [desktop, mobile]
     tokens:
-      xs:
-        value:
-          default: 10px
-          desktop: 10px
-          mobile: 10px
+      family:
+        type: group
+        tokens:
+          clean:
+            name: Adobe Clean
+            value: Adobe Clean
+          clean_serif:
+            name: Adobe Clean Serif
+            value: Adobe Clean Serif
+          clean_han:
+            name: Adobe Clean Han
+            value: Adobe Clean Han
+          source_code:
+            name: Source Code Pro
+            value: Source Code Pro
+      size:
+        type: group
+        modes: ['desktop', 'mobile']
+        tokens:
+          50:
+            value: [11, 11, 13]
+          75:
+            value: [12, 12, 15]
+          100:
+            value: [14, 14, 17]
+          200:
+            value: [16, 16, 19]
+          300:
+            value: [18, 18, 22]
+          400:
+            value: [20, 20, 24]
+          500:
+            value: [22, 22, 27]
+          600:
+            value: [25, 25, 31]
+          700:
+            value: [28, 28, 34]
+          800:
+            value: [32, 32, 39]
+          900:
+            value: [36, 36, 44]
+          1000:
+            value: [40, 40, 49]
+          1100:
+            value: [45, 45, 55]
+          1200:
+            value: [50, 50, 62]
+          1300:
+            value: [60, 60, 70]
