--- a/examples/github/tokens.yaml
+++ b/examples/github/tokens.yaml
@@ -587,12 +587,12 @@ tokens:
       arrow-both-16:
         type: token
         value: arrow-both-16
-  spacing:
-    type: group
-    tokens:
-      spacer:
-        type: scale
-        value: [0, 4, 8, 16, 24, 32, 40]
+  # spacing:
+  #   type: group
+  #   tokens:
+  #     spacer:
+  #       type: scale
+  #       value: [0, 4, 8, 16, 24, 32, 40]
   type:
     name: Typography
     type: group
@@ -601,11 +601,11 @@ tokens:
         type: group
         tokens:
           system:
-            value: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+            value: '-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"'
           monospace:
-            value: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace !default
+            value: '"SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace'
           display:
-            value: InterUI, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+            value: 'InterUI, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif'
       size:
         type: group
         modes: [mobile, desktop]
