--- a/www/package.json
+++ b/www/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@astrojs/renderer-solid": "^0.2.0",
-    "@cobalt-ui/cli": "workspace:^0.0.0-alpha.0",
+    "@cobalt-ui/cli": "^0.0.0-alpha.0",
     "astro": "^0.21.4"
   }
 }
