--- a/examples/github/package.json
+++ b/examples/github/package.json
@@ -10,9 +10,9 @@
     "validate": "cobalt validate"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.0.0-alpha.0",
-    "@cobalt-ui/plugin-css": "^0.0.0-alpha.0",
-    "@cobalt-ui/plugin-sass": "^0.0.0-alpha.0",
+    "@cobalt-ui/cli": "^0.0.0",
+    "@cobalt-ui/plugin-css": "^0.0.0",
+    "@cobalt-ui/plugin-sass": "^0.0.0",
     "@storybook/html": "^6.3.12"
   }
 }
