--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "examples/*",
     "packages/*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/drwpow/cobalt-ui.git"
+  },
+  "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
     "build": "run-s build:*",
+    "build:utils": "cd packages/utils && npm run build",
     "build:core": "cd packages/core && npm run build",
     "build:plugin-css": "cd packages/plugin-css && npm run build",
     "build:plugin-json": "cd packages/plugin-json && npm run build",
     "build:plugin-sass": "cd packages/plugin-sass && npm run build",
     "build:plugin-ts": "cd packages/plugin-ts && npm run build",
-    "build:utils": "cd packages/utils && npm run build",
+    "cf:build": "cd www && npm install && npm run build",
     "dev": "run-p dev:*",
     "dev:core": "cd packages/core && npm run dev",
     "dev:plugin-css": "cd packages/plugin-css && npm run dev",
