--- a/www/package.json
+++ b/www/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "astro:build": "astro build",
     "astro:dev": "astro dev",
-    "build": "npm-s *:build",
+    "build": "run-s *:build",
     "cobalt:build": "cobalt build",
     "cobalt:dev": "cobalt build -w",
     "dev": "run-p *:dev"
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "@astrojs/renderer-solid": "^0.2.0",
-    "@cobalt-ui/cli": "^0.0.0-alpha.0",
-    "astro": "^0.21.4"
+    "@cobalt-ui/cli": "^0.0.0",
+    "astro": "^0.21.4",
+    "npm-run-all": "^4.1.5"
   }
 }
