--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "workspaces": [
     "examples/*",
-    "packages/*"
+    "packages/*",
+    "www"
   ],
   "repository": {
     "type": "git",
@@ -36,7 +37,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "typescript": "^4.5.2"
   }
 }
