--- a/www/package.json
+++ b/www/package.json
@@ -12,10 +12,12 @@
     "dev": "run-p *:dev"
   },
   "dependencies": {
-    "solid-js": "^1.2.5"
+    "@astrojs/renderer-vue": "^0.2.0",
+    "js-yaml": "^4.1.0",
+    "prismjs": "^1.25.0",
+    "vue": "^3.2.23"
   },
   "devDependencies": {
-    "@astrojs/renderer-solid": "^0.2.0",
     "@cobalt-ui/cli": "^0.0.0",
     "astro": "^0.21.4",
     "npm-run-all": "^4.1.5"
