--- a/www/package.json
+++ b/www/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^0.0.0",
-    "astro": "^0.21.4",
+    "astro": "^0.21.6",
+    "node-fetch": "^3.1.0",
     "npm-run-all": "^4.1.5"
   }
 }
